# zeus-bilby

./: .pre-commit-config.yaml  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
src/zeus_bilby/: __init__.py  plugin.py
tests/: conftest.py  test_bilby_integration.py  test_sampler_class.py
